--- a/app/templates/content_calendar/index.html
+++ b/app/templates/content_calendar/index.html
@@ -91,9 +91,7 @@
     <!-- Main Content Area -->
     <div class="main-content-area">
         <!-- Calendar View -->
-        <div class="main-panel" id="calendar-panel">
-            <div id="calendar"></div>
-        </div>
+        <div id="calendar"></div>
 
         <!-- Table View -->
         <div class="main-panel" id="table-view">
@@ -170,10 +168,9 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Analytics Panel -->
-    <div id="analytics-panel" class="analytics-panel">
+        <!-- Analytics Panel -->
+        <div class="main-panel" id="analytics-panel">
         <!-- Content Type Section -->
         <div class="analytics-section">
             <h3><i class="ph ph-tag"></i> Content Type</h3>
@@ -236,6 +233,7 @@
                     <!-- X-axis labels will be generated dynamically -->
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </div>
