--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1050,7 +1050,7 @@
                    class="nav-subitem {% if request.endpoint and 'x_post_editor' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
                     <i class="ph ph-pencil-simple"></i>
-                    <span>Post Magic</span>
+                    <span>Post Studio</span>
                 </a>
                 {% endif %}
 
