--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -365,7 +365,7 @@
                 <div class="preview-features">
                     <div class="preview-feature">
                         <i class="ph ph-check-circle"></i>
-                        <span>Post Magic</span>
+                        <span>Post Studio</span>
                     </div>
                     <div class="preview-feature">
                         <i class="ph ph-check-circle"></i>
