--- a/app/templates/core/home.html
+++ b/app/templates/core/home.html
@@ -293,7 +293,7 @@
                     <div class="text-center mb-3">
                         <i class="ph ph-pencil-simple text-info" style="font-size: 2.5rem;"></i>
                     </div>
-                    <h5 class="card-title text-center">Post Magic</h5>
+                    <h5 class="card-title text-center">Post Studio</h5>
                     <p class="text-muted text-center">Create engaging X posts with AI</p>
                 </div>
             </div>
