--- a/app/templates/x_post_editor/index.html
+++ b/app/templates/x_post_editor/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Post Magic - Create Engaging X/Twitter Content | Creatrics{% endblock %}
+{% block title %}Post Studio - Create Engaging X/Twitter Content | Creatrics{% endblock %}
 
 {% block seo_meta %}
 <meta name="description" content="Create engaging social media posts with AI. Generate viral X/Twitter content, optimize for engagement, and manage your social media strategy with Creatrics AI-powered post editor.">
@@ -19,7 +19,7 @@
         <div class="sidebar-header">
             <h2 class="sidebar-title">
                 <i class="ph ph-pencil-simple"></i>
-                Post Magic
+                Post Studio
             </h2>
             <button class="new-draft-btn" id="new-draft-button">
                 <i class="ph ph-plus"></i>
