--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -381,6 +381,10 @@
                     </div>
                     <div class="preview-feature">
                         <i class="ph ph-check-circle"></i>
+                        <span>News Tracker</span>
+                    </div>
+                    <div class="preview-feature">
+                        <i class="ph ph-check-circle"></i>
                         <span>Analytics</span>
                     </div>
                 </div>
